--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -10,6 +10,7 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             border: 5px solid red;
         }
@@ -22,6 +23,12 @@
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;   /*linhamento horizontal left, center, right */
+            vertical-align:middle ;  /*alinha as celulas / top, midle, bottom */
+        }
+
+        .numero{
+            text-align: right;
         }
 
     </style>
@@ -37,12 +44,12 @@
     <tr class="linha"> <!-- Segunda linha-->
         <td>A2</td>
         <td>B2</td>
-        <td>C2</td>
+        <td class="numero">C2</td>
     </tr>
     <tr>
         <td>A3</td>
         <td>B3</td>
-        <td>C3</td>
+        <td class="numero">C3</td>
     </tr>  <!-- Terceira linha-->
     <tr>
         <td>A4</td>
