--- a/exercicios/ex023/desafio14.html
+++ b/exercicios/ex023/desafio14.html
@@ -30,7 +30,7 @@
 
         tr{
             text-align: left;
-        }
+        }   
     </style>
 </head>
 <body>
@@ -38,7 +38,7 @@
     <table>
        <thead>
            <tr>
-            <th rowspan="5" scope="col">Área</th>
+            <th rowspan="5" scope="row">Área</th>
             <th rowspan="2">Disciplinas</th>
             <th colspan="2">Notas</th>
             <th rowspan="2">Média</th>
