--- a/desafios/exercicios/ex026/mq005/index.html
+++ b/desafios/exercicios/ex026/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu responsivo</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
  <header>
+
 <h1>Meu site</h1>
-<menu>
+<span id="burguer" class="material-icons" onclick=" clickMenu()">menu</span>
+<menu id="itens">
     <ul>
         <li><a href="#">Opção 1</a></li>
         <li><a href="#">Opcão 2</a></li>
@@ -29,5 +33,15 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque itaque at numquam corporis ad hic! Quisquam maiores vitae libero ab tempore ipsum, deserunt, quia velit laborum quam sequi assumenda architecto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ducimus alias. Maiores inventore tenetur modi fugit est nisi perferendis pariatur atque aspernatur similique, placeat quod repellendus illum molestiae aliquam in!</p>
     </article>
  </main>
+ <script>
+    function clickMenu() {
+        if (itens.style.display == 'block') {
+            itens.style.display = 'none'
+        } else {
+            itens.style.display = 'block'
+        }
+     }
+    
+ </script>
 </body>
 </html>
