menu flexbox com media query

--- a/desafios/exercicios/ex027/flex012-menu flexbox/index.html
+++ b/desafios/exercicios/ex027/flex012-menu flexbox/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=[device-width], initial-scale=1.0">
     <title>Menu Flexbox</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 600px)">
 </head>
 <body>
     <header>
@@ -18,8 +20,9 @@
             <a href="#">Opção 6</a>
 
         </nav>
-    
+     
     </header>
+
     <main>
         <h2>Teste de flexbox</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dolorem, quaerat at, voluptates cupiditate numquam quos quisquam laboriosam expedita exercitationem harum in temporibus illum accusantium. Sint recusandae repellendus minus cum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio ullam quos ut laudantium, cupiditate iusto perferendis quo molestias eaque itaque molestiae, consequatur provident similique alias maiores dolorum? Eveniet, earum.</p>
