--- a/desafios/desafio17/index.html
+++ b/desafios/desafio17/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1 - grid Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="caixa" id="topo">Topo</header>
+        <nav class="caixa" id="menu"><Menu></Menu></nav>
+        <main class="caixa" id="principal">Principal</main>
+        <aside class="caixa" id="secundario">Secundario</aside>
+        <footer class="caixa" id="rodape">Rodapé</footer>
+
+    </div>
 </body>
-</html>
+</html> 
